Restore Data-Unbundling-Project

--- a/300070001.md
+++ b/300070001.md
@@ -1,35 +1,25 @@
-# Audience-Inclusion-Project <a id="1"/>
+# Data-Unbundling-Project <a id="1"/>
 
-The Audience-Inclusion-Project is a [Dings-Sub-Project](300000033.md) for the [Realization](600033.md) of [Audience-Inclusion-Movies](300070002.md) and other similar Projects.
-
-![Audience View](400000184.jpg)
+The Data-Unbundling-Project is a [Dings-Sub-Project](300000033.md).
 
 ## Problem-Statement <a id="1000"/>
 
-The [Audience](600146.md) is an *essential* [Part](60084.md) of every [Event](600085.md), which can be consumed in our modern World often in two different Flavours:
+Currently Programs like [Gimp](9000053.md) use [File-Formats](9000193.md) to store [Big-Data](9000049.md) together with [Modifictions](600164.md) in one single [Project-File](404.md).
 
-- [Live-Event](600209.md)
-- [Recorded-Event](600211.md)
+On the one Hand this provides some Convenience for the User, but on the Other also comes with Drawbacks.
 
-Both Aspects have their [Justification](600178.md) for the Audience of the [Live-Event](600209.md)&nbsp;...
+### Duplication of Data and Work <a id="1010"/>
 
-- Enjoy the unique Moment.
-- Provide complete Focus on the Event.
+When one Source-File is used in multiple Projects, it is duplicated in every Project-File, which brings serveral Drawbacks:
 
-... as well as for the Audience of the [Recorded-Event](600211.md):
+- Duplicate Work: When the Source-File is changed, it has to be updated in every Project-File.
+- Duplicate Storage: For n Projects each Source-File is stored n Times and therefore requires n Times the [Storage](9000020.md).
 
-- Share the Experience with [Friends](180000002.md) and [Family](180000008.md).
-- Allow the [Actors](202000010.md) to enjoy the Experience of the Audience.
-- Allow the Live-Audience to enjoy the Event multiple Times.
+### Problems with Version-Control-Systems <a id="1020"/>
 
-## Risk-Analysis <a id="2000"/>
+- Each small Change in the Project updates the (often binary) Project-File and therefore n Changes require n Times the Storage in a [Version-Control-System](9000005.md).
 
-The two Aspects have (Somtimes conflicting) [Goals](60058.md), for Example regarding [Attention](60175.md) or [Quality](600120.md), because as known from [Physics](10000000.md) each [Measurement](10000022.md) always influences the measured [System](10000068.md).
+## Solution <a id="2000"/>
 
-## Current Solution
-
-In Order to keep the [Disturbance](600212.md) for the Live-Event at a [Minimum](12000061.md), most of the Time the [Focus](60143.md) of the Recording is on the [Actors](202000010.md), which waste a Lot of [Potential](60128.md), because the [Influence](600126.md) of the [Audience](600146.md) often comes up short.
-
-## Proposed Solution <a id="2000"/>
-
-Provide [Recording-Devices](20000024.md) also to the [Audience](600146.md), that uses them with a [Maximum](12000062.md) of [Mindfulness](41000010.md).
+One Solution for the described Problems would be the Unbundling of the Source-Files from the Modifications.
+-
