--- a/12000062.md
+++ b/12000062.md
@@ -6,7 +6,7 @@ The Minimum-Function is a [Mathematics-Function](12000060.md).
 
 The Maximum $x_{Max}$ of a [Set](60004.md) $[x_1..x_n]$ for a Function $f$:
 
-$$ f(x_{Max}) > f(x_i) \forall x_i \in x_1..x_n $$
+$$ f(x_{Max}) \ge f(x_i) \forall x_i \in x_1..x_n $$
 
 ## Python
 
