--- a/12000062.md
+++ b/12000062.md
@@ -4,7 +4,7 @@ The Minimum-Function is a [Mathematics-Function](12000060.md).
 
 ## Formula
 
-The Maximum $x_{Max}$ of a [Set](60004.md) $[x_1..x_n]$ for a Function $f$:
+A Maximum $x_{Max}$ of a [Set](60004.md) $[x_1..x_n]$ for a Function $f$:
 
 $$ f(x_{Max}) \ge f(x_i) \forall x_i \in x_1..x_n $$
 
