Fix Expression and add Articulus

--- a/12000061.md
+++ b/12000061.md
@@ -4,9 +4,9 @@ The Minimum-Function is a [Mathematics-Function](12000060.md).
 
 ## Formula
 
-Minimum $x_{Min}$ of a [Set](60004.md) $[x_1..x_n]$ for a Function $f$:
+A Minimum $x_{Min}$ of a [Set](60004.md) $[x_1..x_n]$ for a Function $f$:
 
-$$ f(x_{Min}) < f(x_i) \forall x_i \in x_1..x_n $$
+$$ f(x_{Min}) \leq f(x_i) \forall x_i \in x_1..x_n $$
 
 ## Python
 
