Fix Dings-Name and Name-References

--- a/12000062.md
+++ b/12000062.md
@@ -1,6 +1,6 @@
-# Minimum-Function
+# Maximum-Function
 
-The Minimum-Function is a [Mathematics-Function](12000060.md).
+The Maximum-Function is a [Mathematics-Function](12000060.md).
 
 ## Formula
 
@@ -30,7 +30,7 @@ def Maximum_Test():
 	X_Max = Maximum(X1_X2_Xn_Set)
 	print(f"The Maximum of {X1_X2_Xn_Set} is {X_Max}")
 
-Minimum_Test()
+Maximum_Test()
 ```
 ### Invocation
 
