--- a/300080001.md
+++ b/300080001.md
@@ -19,8 +19,8 @@ Both Aspects have their [Justification](600178.md) for the Audience of the [Live
 ... as well as for the Audience of the [Recorded-Event](600211.md):
 
 - Share the Experience with [Friends](180000002.md) and [Family](180000008.md).
-- Allow the [Actors](202000010.md) to enjoy the Experience of the Audience.
-- Allow the Live-Audience to enjoy the Event multiple Times.
+- Allow the [Actors](202000010.md) to enjoy the Experience of the [Audience](600146.md).
+- Allow Everybody to enjoy the Event multiple Times.
 
 ## Risk-Analysis <a id="2000"/>
 
