Rename Smart-Phone-Flight-Mode -> Smart-Phone-Offline-Mode

--- a/300080001.md
+++ b/300080001.md
@@ -33,3 +33,17 @@ In Order to keep the [Disturbance](600212.md) for the Live-Event at a [Minimum](
 ## Proposed Solution <a id="2000"/>
 
 Provide [Recording-Devices](20000024.md) also to the [Audience](600146.md), that uses them with a [Maximum](12000062.md) of [Mindfulness](41000010.md).
+
+### Noise-Disturbance <a id="2010"/>
+
+The well-known [Flight-Mode](20000026.md) should be enabled, to prevent [Noise-Disturbance](290000001.md).
+
+### Light-Disturbance <a id="2020"/>
+
+To prevent [Light-Disturbance](290000003.md) for the general Use of a [Smpart-Phone](20000005.md), the [Dark-Mode](20000025.md) should be enabled:
+
+![Bright/Dark-Mode](400000185.jpg)
+
+To prevent [Light-Disturbance](290000003.md) when recoding a Video with a [Smpart-Phone](20000005.md), the [Brightness-Level](10000117.md) should be reduced:
+
+![Max/Min-Brightness](400000186.jpg)
