--- a/20000026.md
+++ b/20000026.md
@@ -1,3 +1,3 @@
-# Smart-Phone-Flight-Mode
+# Smart-Phone-Offline-Mode
 
-A Smart-Phone-Flight-Mode is a [Mode](600183.md) of a [Smart-Phone](20000005.md).
+A Smart-Phone-Offline-Mode is a [Mode](600183.md) of a [Smart-Phone](20000005.md).
