Add Online/Offline-Mode Images

--- a/300080001.md
+++ b/300080001.md
@@ -36,7 +36,9 @@ Provide [Recording-Devices](20000024.md) also to the [Audience](600146.md), that
 
 ### Noise-Disturbance <a id="2010"/>
 
-The well-known [Flight-Mode](20000026.md) should be enabled, to prevent [Noise-Disturbance](290000001.md).
+To prevent [Noise-Disturbance](290000001.md) the well-known [Flight-Mode](20000026.md) should be enabled:
+
+![Online/Offline-Mode](400000187.jpg)
 
 ### Light-Disturbance <a id="2020"/>
 
