--- a/300080001.md
+++ b/300080001.md
@@ -49,3 +49,11 @@ To prevent [Light-Disturbance](290000003.md) for the general Use of a [Smpart-Ph
 To prevent [Light-Disturbance](290000003.md) when recoding a Video with a [Smpart-Phone](20000005.md), the [Brightness-Level](10000117.md) should be reduced:
 
 ![Max/Min-Brightness](400000186.jpg)
+
+## Show-Stoppers
+
+Of course we should follow the [Rules](60053.md) and must respect the [Agbs](680004.md):
+
+![One Show-Stopper](400000188.jpg)
+
+
