--- a/300080001.md
+++ b/300080001.md
@@ -52,7 +52,7 @@ To prevent [Light-Disturbance](290000003.md) when recoding a Video with a [Smpar
 
 ## Show-Stoppers <a id="3000"/>
 
-Of course we should follow the [Rules](60053.md) and must respect the [Agbs](680004.md):
+And of course we should follow the [Rules](60053.md), because otherwise [Legal-Actions](670039.md) could threaten us&nbsp;-&nbsp;So better respect the [Agb](680004.md):
 
 ![One Show-Stopper](400000188.jpg)
 
