--- a/300080001.md
+++ b/300080001.md
@@ -36,7 +36,7 @@ Provide [Recording-Devices](20000024.md) also to the [Audience](600146.md), that
 
 ### Noise-Disturbance <a id="2010"/>
 
-To prevent [Noise-Disturbance](290000001.md) the well-known [Flight-Mode](20000026.md) should be enabled:
+To prevent [Noise-Disturbance](290000001.md) the well-known [Flight-Mode](20000026.md) should be enabled, but keep in Mind, that this also disables your [Network](9200000.md):
 
 ![Online/Offline-Mode](400000187.jpg)
 
