Fix Typo and add Information

--- a/300080001.md
+++ b/300080001.md
@@ -46,7 +46,7 @@ To prevent [Light-Disturbance](290000003.md) for the general Use of a [Smpart-Ph
 
 ![Bright/Dark-Mode](400000186.jpg)
 
-To prevent [Light-Disturbance](290000003.md) when recoding a Video with a [Smpart-Phone](20000005.md), the [Brightness-Level](10000117.md) should be reduced:
+To prevent [Light-Disturbance](290000003.md) when recording a [Video](200300000.md) or making a [Photo](50000001.md) with your [Smpart-Phone](20000005.md), the [Brightness-Level](10000117.md) should be reduced:
 
 ![Max/Min-Brightness](400000185.jpg)
 
