Make it personal

--- a/300080001.md
+++ b/300080001.md
@@ -42,7 +42,7 @@ To prevent [Noise-Disturbance](290000001.md) the well-known [Flight-Mode](200000
 
 ### Light-Disturbance <a id="2020"/>
 
-To prevent [Light-Disturbance](290000003.md) for the general Use of a [Smpart-Phone](20000005.md), the [Dark-Mode](20000025.md) should be enabled:
+To prevent [Light-Disturbance](290000003.md) for the general Use of your [Smpart-Phone](20000005.md), the [Dark-Mode](20000025.md) should be enabled:
 
 ![Bright/Dark-Mode](400000186.jpg)
 
