--- a/21.md
+++ b/21.md
@@ -80,7 +80,7 @@ The [Bureaucracy](250010005.md) in [Germany](140000025.md) might be more *reliab
 
 ![Miracle in Tübingen!](444444446.jpg)
 
-Though it is quite unlikely that because of this [Symbol](60094.md) the [Israelis](140000071.md) will join the [European-Union](141000002.md), at least for me it could be a good [Argument](600151.md) for more [Love](10000114.md) to [Our-Pretty-Town](2000001.md) and by the Way, besides all [Problems](600029.md) in [My-Birth-Country](140000025.md), I have also seen some Good-Things:
+Though it is quite unlikely, that this [Symbol](60094.md) makes the [Israelis](140000071.md) join the [European-Union](141000002.md), at least for me it could be a good [Argument](600151.md) for more [Love](10000114.md) to [Our-Pretty-Town](2000001.md) and by the Way, besides all [Problems](600029.md) in [My-Birth-Country](140000025.md), I have also seen some Good-Things:
 
 ![Still in Germany!](444444447.jpg)
 
