My-Choir-Sprecherin

--- a/1971091177.md
+++ b/1971091177.md
@@ -1,3 +1,3 @@
-# Doktor_Holzheu
+# My-Choir-Sprecherin
 
-Doktor_Holzheu is the planned [Identity](170000000.md) of [Michael_Holzheu](0.md) in the [Academics-System](600000.md).
+My-Choir-Sprecherin is a [Human](40000001.md).
