--- a/300050001.md
+++ b/300050001.md
@@ -106,6 +106,7 @@ The main [Use-Case](600170.md) for the [Zero-Wave-Device](20000021.md) is [Heati
 ### Prevent Disasters <a id="1420"/>
 
 - Create Anti-[Water-Waves](10000084.md) to stop [Zunamis](40901000.md).
+- Create Anti-Earth-Waves to stop [Earth-Quakes](40901001.md).
 
 ### Contact Universes <a id="1430"/>
 
