--- a/300050001.md
+++ b/300050001.md
@@ -113,7 +113,7 @@ The main [Use-Case](600170.md) for the [Zero-Wave-Device](20000021.md) is [Heati
 
 - Establish [Communication](60061.md) with [Parallel-Universes](10000075.md).
 
-### Control Expansion <a id="1440"/>
+### Control Universes <a id="1440"/>
 
 If it turns out, that [Zero-Energy](10000061.md)/[Zero-Particles](10000061.md) are indeed [Dark-Energy](10000097.md)/[Dark-Matter](10000098.md), it might be possible to influence the Expansion of [Our-Universe](10000074.md), by generating [Zero-Energy](10000061.md)/[Zero-Particles](10000061.md).
 
