--- a/300050001.md
+++ b/300050001.md
@@ -85,6 +85,7 @@ For this Invention all Kind of Waves can be used, for Example:
 
 - [Light-Waves](10000012.md)
 - [Sound-Waves](40200001.md)
+- [Solid-Matter-Waves](10000118.md)
 - [Water-Waves](10000084.md)
 - [Wind-Waves](10000083.md)
 - [Gravity-Waves](10000099.md)
@@ -107,7 +108,7 @@ The main [Use-Case](600170.md) for the [Zero-Wave-Device](20000021.md) is [Heati
 
 - Create Anti-[Water-Waves](10000084.md) to stop [Zunamis](40901000.md).
 - Create Anti-[Wind-Waves](10000083.md) to stop [Typhons](40901002.md).
-- Create Anti-Earth-Waves to stop [Earth-Quakes](40901001.md).
+- Create Anti-[Earth-Waves](10000118.md) to stop [Earth-Quakes](40901001.md).
 
 ### Contact Universes <a id="1430"/>
 
