--- a/300050001.md
+++ b/300050001.md
@@ -35,7 +35,7 @@ There is at least one accepted Case, where the [Energy-Convervation-Law](1000001
 
 - The [Wave-Energy](10000080.md) is tunneled into a [Parallel-Universe](10000075.md).
 
-If that Theory is correct, the [Zero-Wave-Device](20000021.md) can also be used for [Communication](60061.md) with [Parallel-Universes](10000075.md) and in case there live more developed [Living-Beings](40000016.md), who already developed such a Device, it might be worth to search for [Patterns](60112.md) in [Quantum-Fluctuations](10000096.md), that cannot be explained by simple [Stochastics](13005001.md).
+If that Theory is correct, the [Zero-Wave-Device](20000021.md) can also be used for [Communication](60061.md) with [Parallel-Universes](10000075.md) and in case there live more developed [Living-Beings](40000016.md), who already have invented such a Device, it might be worth to search for [Patterns](60112.md) in [Quantum-Fluctuations](10000096.md), that cannot be explained by simple [Stochastics](13005001.md).
 
 ### Dark-Energy/Matter <a id="1130"/>
 
