--- a/1971091111.md
+++ b/1971091111.md
@@ -1,3 +1,3 @@
 # My-Bible
 
-My-Bible is a [Bible](71000008.md) of [Michael_Holzheu](0.md).
+My-Bible is a [Einheits-Übersetzung-Bible](71000015.md) of [Michael_Holzheu](0.md).
