--- a/70000073.md
+++ b/70000073.md
@@ -1,3 +1,7 @@
 # Benjamin_Netanjahu
 
 Benjamin_Netanjahu is a [Human](40000001.md).
+
+## Links
+
+- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Benjamin_Netanyahu)
