--- a/180000017.md
+++ b/180000017.md
@@ -1,3 +1,7 @@
 # Amalek
 
 Amalek is a [Nomadic-Group](180000016.md).
+
+## Links
+
+- Wikpedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Amalek)
