--- a/23.md
+++ b/23.md
@@ -1,7 +1,8 @@
-23.md# About-Dings-Project
+# About-Dings-Project
 
 ## Table of Contents <a id="1"/>
 
+- [Day-118](#18000) Politics and Religion
 - [Day-116](#16000) The Local-Web-App
 - [Day-112](#12000) Theory vs. Reality
 - [Day-109](#10900) The Don't-Waste-App
@@ -63,6 +64,52 @@
 - [Day-5](#500) First Concepts
 - [Day-4](#400) Big "Cleanup"
 - [Day-3](#300) A nasty Egg
+
+## Day-118: Politics and Religion <a id="18000"/>
+
+#### Blog-Chain-Time 2023.11.23-19:00 in Tübingen  <a id="18001"/>
+###### Topics: Politics, Religion
+
+After a Talk with [My-Black-Forest-Friend](1971091169.md) on the current [Israel-Conflict](141000015.md), he sends me a Link to a [YouTube](190000001.md)-Video [[0]](#18050), where a [Statement](600078.md) of the American Ex-Admiral [John_Kirby](70000074.md)&nbsp;...
+
+> Israel is not trying to wipe the Palestinian People off their map.
+
+... is compared by [Katy_Halper](70000075.md) with a [Speech](60010004.md) [[1]](#18051) of [Netanjahu](70000073.md) from End of October 2023:
+
+> "You must remember what *Amalek* has done to you" says our Holy Bible. \
+> We do remember and we are fighting.
+
+This is a [Quote](700059.md) [[2]](#18052) of the [Book-of-Deuteronomy](71000017.md), where it is written:
+
+> Don’t forget what *Amalek* did to you on the Road after you left Egypt, how he attacked you when you were tired, barely able to put one Foot in front of another, mercilessly cut off your Stragglers, and had no regard for God. When GOD, your God, gives you rest from all the Enemies that surround you in the inheritance-land GOD, your God, is giving you to Possess, you are to *wipe the name of Amalek from off the Earth*. Don’t forget!
+
+The [Amalek](180000017.md) are [Nomadic-People](180000016.md), who are said to have had a lot of Trouble with the [Israeli-People](140000071.md) and probably (as planned by God) got wiped out because of that:
+
+![Dead Tribe](400000192.jpg)
+
+In his Speach [Mr-Netanjahu](70000073.md) equates the [Palestinians](140000073.md) with the [Amalek](180000017.md) and this is then used by [Katy_Halper](70000075.md) as a [Proof](600022.md) for the [Contradiction](600112.md) to the Statement of [John_Kirby](70000074.md), which I would summarize to the following [Claim](600078.md):
+
+> Mr-Kirby is wrong, because Mr-Netanjahu (indirectly) said: Israel *is* trying to wipe the Palestinian People off their map.
+
+After doing some Research on the cited Text in the [Internet](9000152.md), I look again into [My-Bible](1971091111.md), that I read a lot as a Teen-Ager and later used in many Discussions with [My-Jehovah's-Witnesses](1971091179.md):
+
+![Good-Old Bible](400000189.jpg)
+
+In the [First-Book-of-Samuel](71000020.md) as well as in the [Second-Book-Mose](71000021.md) I also find clear Statements [[3](#18053),[4](#18054)], what our (good?) [God](647003.md) had in Mind for that (bad?) [Amalek](180000017.md) and because this also could be a [Proof](600022.md) of [My-God-is-bad-Hypothethis](200100003.md), I now want to hear the [Opinion](600028.md) of [Our-Bible-Expert](1971091178.md), who has been a [Teacher](60077.md) for [Religion](647000.md).
+
+In a long and interesting Talk I learn a lot about the [History](10000019.md) of the [Israeli-People](140000071.md), but I can't elicit a clear [Statement](600078.md) from him about the *real* [Meaning](60002.md) of that problematic [Passages](60084.md).
+
+Nevertheless the Time was worth it, because I got a lot of new Information for [My-Doctorial-Thesis](333333333.md), where I finally plan to find out [The-Truth](600140.md), even if this will be not an easy Task:
+
+![Complicated Thing](400000177.jpg)
+
+## Footnotes
+
+[<a id="18050"/>0] Debunking Zionist LIES: [https://youtube.com](https://www.youtube.com/live/adPAmvGN234?si=bg7HI7QfArZwgL3p&t=393) \
+[<a id="18051"/>1] Uneindeutigkeit als Taktik: [https://taz.de](https://taz.de/Benjamin-Netanjahus-Kriegsrhetorik/!5964144) \
+[<a id="18052"/>2] Deuteronomy: [https://www.bible.com](https://www.bible.com/bible/97/DEU.25.17,18,19) \
+[<a id="18053"/>3] [My-Bible-Samuel-1-15-2](400000190.md) \
+[<a id="18054"/>4] [My-Bible-Exodus-17-4](400000191.md)
 
 ## Day-116: The Local-Web-App <a id="16000"/>
 
