--- a/23.md
+++ b/23.md
@@ -81,7 +81,7 @@ After a Talk with [My-Black-Forest-Friend](1971091169.md) on the current [Israel
 
 This is a [Quote](700059.md) [[2]](#18052) of the [Book-of-Deuteronomy](71000017.md), where it is written:
 
-> Don’t forget what *Amalek* did to you on the Road after you left Egypt, how he attacked you when you were tired, barely able to put one Foot in front of another, mercilessly cut off your Stragglers, and had no regard for God. When GOD, your God, gives you rest from all the Enemies that surround you in the inheritance-land GOD, your God, is giving you to Possess, you are to *wipe the name of Amalek from off the Earth*. Don’t forget!
+> Don’t forget what *Amalek* did to you on the Road after you left Egypt, how he attacked you when you were tired, barely able to put one Foot in front of another [...]. When GOD, your God, gives you Rest from all the Enemies that surround you in the inheritance-land GOD, your God, is giving you to Possess, you are to *wipe the name of Amalek from off the Earth*. Don’t forget!
 
 The [Amalek](180000017.md) are [Nomadic-People](180000016.md), who are said to have had a lot of Trouble with the [Israeli-People](140000071.md) and probably (as planned by God) got wiped out because of that:
 
