--- a/23.md
+++ b/23.md
@@ -70,11 +70,11 @@
 #### Blog-Chain-Time 2023.11.23-19:00 in Tübingen  <a id="18001"/>
 ###### Topics: Politics, Religion
 
-After a Talk with [My-Black-Forest-Friend](1971091169.md) on the current [Israel-Conflict](141000015.md), he sends me a Link to a [YouTube](190000001.md)-Video [[0]](#18050), where a [Statement](600078.md) of the American Ex-Admiral [John_Kirby](70000074.md)&nbsp;...
+After a Talk with [My-Black-Forest-Friend](1971091169.md) on the current [Israel-Conflict](141000015.md), he sends me a Link to a [YouTube](190000001.md)-Video [[0]](#18050) with a [Statement](600078.md) of the American Ex-Admiral [John_Kirby](70000074.md):
 
 > Israel is not trying to wipe the Palestinian People off their map.
 
-... is compared by [Katy_Halper](70000075.md) with a [Speech](60010004.md) [[1]](#18051) of [Netanjahu](70000073.md) from End of October 2023:
+This is then compared by [Katy_Halper](70000075.md) with a [Speech](60010004.md) [[1]](#18051) of [Netanjahu](70000073.md) from End of October 2023:
 
 > "You must remember what *Amalek* has done to you" says our Holy Bible. \
 > We do remember and we are fighting.
