--- a/23.md
+++ b/23.md
@@ -89,17 +89,17 @@ The [Amalek](180000017.md) are [Nomadic-People](180000016.md), who are said to h
 
 In his Speach [Mr-Netanjahu](70000073.md) equates the [Palestinians](140000073.md) with the [Amalek](180000017.md) and this is then used by [Katy_Halper](70000075.md) as a [Proof](600022.md) for the [Contradiction](600112.md) to the Statement of [John_Kirby](70000074.md), which I would summarize to the following [Claim](600078.md):
 
-> Mr-Kirby is wrong, because Mr-Netanjahu (indirectly) said: Israel *is* trying to wipe the Palestinian People off their map.
+> Mr-Kirby is wrong, because Mr-Netanjahu (indirectly) says: Israel *is* trying to wipe the Palestinian People off their map.
 
 After doing some Research on the cited Text in the [Internet](9000152.md), I look again into [My-Bible](1971091111.md), that I read a lot as a Teen-Ager and later used in many Discussions with [My-Jehovah's-Witnesses](1971091179.md):
 
 ![Good-Old Bible](400000189.jpg)
 
-In the [First-Book-of-Samuel](71000020.md) as well as in the [Second-Book-Mose](71000021.md) I also find clear Statements [[3](#18053),[4](#18054)], what our (good) [God](647003.md) had in Mind for that (bad) [Amalek](180000017.md) and because this also could be a [Proof](600022.md) of [My-God-is-bad-Hypothethis](200100003.md), I now want to hear the [Opinion](600028.md) of [Our-Bible-Expert](1971091178.md), who has been a [Teacher](60077.md) for [Religion](647000.md).
+In the [First-Book-of-Samuel](71000020.md) as well as in the [Second-Book-Mose](71000021.md) I then find two clear Statements [[3](#18053),[4](#18054)], what our (good) [God](647003.md) had in Mind for that (bad) [Amalek](180000017.md) and because this also could be a [Proof](600022.md) of [My-God-is-bad-Hypothethis](200100003.md), to be on the safe Side, I want to hear a second [Opinion](600028.md) of [Our-Bible-Expert](1971091178.md), who has been a [Teacher](60077.md) for [Religion](647000.md).
 
 In a long and interesting Talk I learn a lot about the [History](10000019.md) of the [Israeli-People](140000071.md), but I can't elicit a clear [Statement](600078.md) from him about the *real* [Meaning](60002.md) of that problematic [Passages](60084.md).
 
-Nevertheless the Time was worth it, because I got a lot of new Information for [My-Doctorial-Thesis](333333333.md), where I finally plan to find out [The-Truth](600140.md), even if this will be not an easy Task:
+Nevertheless the Time was worth it, because I got some new Information for [My-Doctorial-Thesis](333333333.md), where I finally plan to find out [The-Truth](600140.md)&nbsp;-&nbsp;Even if this will be not an easy Task:
 
 ![Complicated Thing](400000177.jpg)
 
