--- a/23.md
+++ b/23.md
@@ -87,7 +87,7 @@ The [Amalek](180000017.md) are [Nomadic-People](180000016.md), who are said to h
 
 ![Dead Tribe](400000192.jpg)
 
-Nevertheless in his Speach [Mr-Netanjahu](70000073.md) seems to equate the still living [Palestinians](140000073.md) with the dead [Amalek](180000017.md) and is then used by [Katy_Halper](70000075.md) as a [Proof](600022.md) for the [Contradiction](600112.md) to the Statement of [John_Kirby](70000074.md), which I would summarize to the following [Claim](600078.md):
+Nevertheless in his Speach [Mr-Netanjahu](70000073.md) seems to equate the still living [Palestinians](140000073.md) with the dead [Amalek](180000017.md) and this is then used by [Katy_Halper](70000075.md) as a [Proof](600022.md) for the [Contradiction](600112.md) to the Statement of [John_Kirby](70000074.md), which I would summarize to the following [Claim](600078.md):
 
 > Mr-Kirby is wrong, because Mr-Netanjahu (indirectly) says: Israel *is* trying to wipe the Palestinian People off their map.
 
