--- a/23.md
+++ b/23.md
@@ -89,7 +89,7 @@ The [Amalek](180000017.md) are [Nomadic-People](180000016.md), who are said to h
 
 Nevertheless in his Speach [Mr-Netanjahu](70000073.md) seems to equate the still living [Palestinians](140000073.md) with the dead [Amalek](180000017.md) and this is then used by [Katy_Halper](70000075.md) as a [Proof](600022.md) for the [Contradiction](600112.md) to the Statement of [John_Kirby](70000074.md), which I would summarize to the following [Claim](600078.md):
 
-> Mr-Kirby is wrong, because Mr-Netanjahu (indirectly) says: Israel *is* trying to wipe the Palestinian People off their map.
+> Mr-Kirby is wrong, because Mr-Netanjahu (indirectly) says: Israel *is* trying to wipe the Palestinian People off their Map.
 
 After doing some Research on the cited Text in the [Internet](9000152.md), I look again into [My-Bible](1971091111.md), that I read a lot as a Teen-Ager and later used in many Discussions with [My-Jehovah's-Witnesses](1971091179.md):
 
