Make it more clear

--- a/23.md
+++ b/23.md
@@ -72,7 +72,7 @@
 
 After a Talk with [My-Black-Forest-Friend](1971091169.md) on the current [Israel-Conflict](141000015.md), he sends me a Link to a [YouTube](190000001.md)-Video [[0]](#18050) with a [Statement](600078.md) of the American Ex-Admiral [John_Kirby](70000074.md):
 
-> Israel is not trying to wipe the Palestinian People off their map.
+> Israel is *not* trying to wipe the Palestinian People off their map.
 
 This is then compared by [Katy_Halper](70000075.md) with a [Speech](60010004.md) [[1]](#18051) of [Netanjahu](70000073.md) from End of October 2023:
 
