--- a/23.md
+++ b/23.md
@@ -95,7 +95,7 @@ After doing some Research on the cited Text in the [Internet](9000152.md), I loo
 
 ![Good-Old Bible](400000189.jpg)
 
-In the [First-Book-of-Samuel](71000020.md) as well as in the [Second-Book-Mose](71000021.md) I then find two clear Statements [[3](#18053),[4](#18054)], what our (good) [God](647003.md) had in Mind for that (bad) [Amalek](180000017.md) and because this also could be a [Proof](600022.md) of [My-God-is-bad-Hypothethis](200100003.md), I want to hear a second [Opinion](600028.md) of [Our-Bible-Expert](1971091178.md), who has been a [Teacher](60077.md) for [Religion](647000.md).
+In the [First-Book-of-Samuel](71000020.md) as well as in the [Second-Book-of-Mose](71000021.md) I then find two clear Statements [[3](#18053),[4](#18054)], what our (good) [God](647003.md) had in Mind for that (bad) [Amalek](180000017.md) and because this also could be a [Proof](600022.md) of [My-God-is-bad-Hypothethis](200100003.md), I want to hear a second [Opinion](600028.md) of [Our-Bible-Expert](1971091178.md), who has been a [Teacher](60077.md) for [Religion](647000.md).
 
 In a long and interesting Talk I learn a lot about the [History](10000019.md) of the [Israeli-People](140000071.md), but I can't elicit a clear [Statement](600078.md) from him about the *real* [Meaning](60002.md) of that problematic [Passages](60084.md).
 
