Use Present-Perfect

--- a/23.md
+++ b/23.md
@@ -83,7 +83,7 @@ I find out, that this is a [Quote](700059.md) [[2]](#18052) of the [Book-of-Deut
 
 > Don’t forget what *Amalek* did to you on the Road after you left Egypt, how he attacked you when you were tired, barely able to put one Foot in front of another [...]. When GOD, your God, gives you Rest from all the Enemies that surround you in the inheritance-land GOD, your God, is giving you to Possess, you are to *wipe the name of Amalek from off the Earth*. Don’t forget!
 
-The [Amalek](180000017.md) are [Nomadic-People](180000016.md), who are said to have had a lot of Trouble with the [Israeli-People](140000071.md) and probably (as planned by God) got wiped out because of that:
+The [Amalek](180000017.md) have been [Nomadic-People](180000016.md), who are said to have had a lot of Trouble with the [Israeli-People](140000071.md) and probably (as planned by God) got wiped out because of that:
 
 ![Dead Tribe](400000192.jpg)
 
