Add missing Text

--- a/670038.md
+++ b/670038.md
@@ -13,5 +13,5 @@ Our license allows you to use the content
 - On digital or printed media
 - For an unlimited number of times and without any time limits
 - From anywhere in the world
-- To ma
+- To make modifications and create derivative works
 ```
