--- a/200100003.md
+++ b/200100003.md
@@ -1,6 +1,10 @@
 # God-is-an-Ass-Hole
 
-God-is-an-Ass-Hole is a [Saying](200100000.md) from [Michael_Holzheu](0.md), that compares [God](647004.md) with an [Ass-Hole](40000037.md) and a [Hypothesis](600028.md) that [God](647004.md) is not [Good](60120.md).
+God-is-an-Ass-Hole is a [Saying](200100000.md) from [Michael_Holzheu](0.md), that compares [God](647004.md) with an [Ass-Hole](40000037.md).
+
+## Related
+
+- [God-is-not-Good-Hypothesis](301000004.md)
 
 ## Translations
 
