--- a/301000004.md
+++ b/301000004.md
@@ -1,6 +1,6 @@
 # God-is-not-Good-Hypothesis
 
-God-is-not-Good-Hypothesis a [Hypothesis](600028.md) that [God](647004.md) is not [Good](60120.md).
+God-is-not-Good-Hypothesis a [Hypothesis](600028.md), that [God](647004.md) is not [Good](60120.md).
 
 ## Related
 
