--- a/23.md
+++ b/23.md
@@ -93,7 +93,7 @@ Nevertheless in his Speach [Mr-Netanjahu](70000073.md) seems to equate the still
 
 After doing some Research on the cited Text in the [Internet](9000152.md), I look again into [My-Bible](1971091111.md), that I read a lot as a Teen-Ager and later used in many Discussions with [My-Jehovah's-Witnesses](1971091179.md):
 
-![Used Bible](400000189.jpg)
+![Used Thing](400000189.jpg)
 
 In the [First-Book-of-Samuel](71000020.md) as well as in the [Second-Book-of-Mose](71000021.md) I then find two clear Statements [[3](#18053),[4](#18054)], what our (good) [God](647003.md) had in Mind for that (bad) [Amalek](180000017.md) and because this also could be a [Proof](600022.md) of [My-God-is-Bad-Hypothethis](301000004.md), I want to hear a second [Opinion](600028.md) of [Our-Bible-Expert](1971091178.md), who has been a [Teacher](60077.md) for [Religion](647000.md).
 
