Make it consistent

--- a/23.md
+++ b/23.md
@@ -85,7 +85,7 @@ I find out, that this is a [Quote](700059.md) [[2]](#18052) of the [Book-of-Deut
 
 The [Amalek](180000017.md) were [Nomadic-People](180000016.md), who are said to have had a lot of Trouble with the [Israeli-People](140000071.md) and probably (as planned by God) got wiped out because of that:
 
-![Dead Tribe](400000192.jpg)
+![Dead Thing](400000192.jpg)
 
 Nevertheless in his Speach [Mr-Netanjahu](70000073.md) seems to equate the still living [Palestinians](140000073.md) with the dead [Amalek](180000017.md) and this is then used by [Katy_Halper](70000075.md) as a [Proof](600022.md) for the [Contradiction](600112.md) to the Statement of [John_Kirby](70000074.md), which I would summarize to the following [Claim](600078.md):
 
