Make it more readable

--- a/23.md
+++ b/23.md
@@ -456,7 +456,7 @@ $$ F^{2*\frac{1}{2}} = 128^{\frac{1}{6} * \frac{1}{2}} $$
 
 Oehm, this somehow looks familiar, but thank Good, as every good [Informatic-Student](9999998.md) already knows by Heart, we fortunately can rewrite the Binary-Number 128 as Follows:
 
-$$ F = 128^\frac{1}{12} = (2 * 2 * 2 * 2 * 2 * 2 * 2)^\frac{1}{12} = {2^7}^\frac{1}{12} $$
+$$ F = 128^\frac{1}{12} = (2 * 2 * 2 * 2 * 2 * 2 * 2)^\frac{1}{12} = ({2^7})^\frac{1}{12} $$
 
 With the already successfully applied Mechanism, we further simplify that:
 
