--- a/23.md
+++ b/23.md
@@ -151,11 +151,11 @@ If such Apps become widespread, good [Speculators](404.md) go [Short](404.md) wi
 #### Blog-Chain-Time 2023.10.19-20:50 at the Piccolo <a id="12014"/>
 ###### Topics: Music, Women, Reality
 
-Because of a lot of Traffic, I arrive a little bit late at the [Piccolo](2010033.md), where currently the [Gig](60081.md) of [My-Singing-Teacher](1971091167.md) takes Place and almost as planned, already at the Entrance I meet [My-Artist-Friend](1971091155.md) - Sometimes I *really* wonder, if such [Coincidences](99.md) in [Theory](7000001.md) are [Synchronisities](60161.md) in [Reality](40000.md).
+Because of a lot of Traffic, I arrive a little bit late at the [Piccolo](2010033.md), where currently the [Gig](60081.md) of [My-Singing-Teacher](1971091167.md) takes Place and almost as planned, already at the Entrance I meet [My-Artist-Friend](1971091155.md)&nbsp;-&nbsp;Sometimes I *really* wonder, if such [Coincidences](99.md) in [Theory](7000001.md) are [Synchronisities](60161.md) in [Reality](40000.md).
 
-But as *really* planned, I am also pleased to see [My-Alt-Choir-Buddy](1971091160.md) and her [Friend](180000002.md) - As is known, with the Former I already worked a lot on the [Theory](7000001.md) of our [Pythagorean-Topic](1971093002.md).
+But as *really* planned, I am also pleased to see [My-Alt-Choir-Buddy](1971091160.md) and her [Friend](180000002.md)&nbsp;-&nbsp;As is known, with the Former I already worked a lot on the [Theory](7000001.md) of our [Pythagorean-Topic](1971093002.md).
 
-We sing together with our [Coach](202000023.md) the second [Encore](600172.md) and the very last [Addition](600172.md) is then a Solo-Performance again, where at one Point I *really* got the Impression, that the [Voice](60096.md) of my female Teacher almost sounds like a [Saxophon](90000042.md) - Which cannot be [The-Truth](600140.md) of course in [Reality](40000.md).
+We sing together with our [Coach](202000023.md) the second [Encore](600172.md) and the very last [Addition](600172.md) is then a Solo-Performance again, where at one Point I *really* got the Impression, that the [Voice](60096.md) of my female Teacher almost sounds like a [Saxophon](90000042.md)&nbsp;-&nbsp;Which cannot be [The-Truth](600140.md) of course in [Reality](40000.md).
 
 Because it was a *really* nice Conclusion for my Day, I thankfully buy from [our](150000007.md) mobile [Florist](202000022.md) three nice [Roses](260020004.md) for three *really* nice [Women](40000010.md), who fortunately *really* like [Flowers](260020000.md) and of course the most beautiful One goes to our great [Singing-Sax](1971091167.md):
 
@@ -352,7 +352,7 @@ High Numbers are [Pain-in-the-Ass](404.md) for the [Brain](40000026.md), so use 
 
 $$ F^12 = (10 + 6) * 4 * 2 $$
 
-Then we use the nice [Distributive-Feature](13000037.md) of our [Real-Numbers](13000039.md), but [Watch out Boy](300003.md) - don't forget the Brackets:
+Then we use the nice [Distributive-Feature](13000037.md) of our [Real-Numbers](13000039.md), but [Watch out Boy](300003.md)&nbsp;-&nbsp;don't forget the Brackets:
 
 $$ F^12 = (10*4 + 6*4) * 2 $$
 
@@ -418,7 +418,7 @@ Back at Home I finally manage it to read the last E-Mail from my Friend from Bot
 
 > Hatte meine Tabelle falsch gelesen.
 
-Of course this must be a [White-Lie](600161.md) to make me feel better - such a nice [Cupcake](40000010.md). We all know that [Rule-1](200100004.md) is [Truth-by-Definition](600152.md), which now reminds me to a Discussion about [1:N-Relations](60093.md), I had this Afternoon mit [my](88.md) dear Fellow-Occupant.
+Of course this must be a [White-Lie](600161.md) to make me feel better&nbsp;-&nbsp;such a nice [Cupcake](40000010.md). We all know that [Rule-1](200100004.md) is [Truth-by-Definition](600152.md), which now reminds me to a Discussion about [1:N-Relations](60093.md), I had this Afternoon mit [my](88.md) dear Fellow-Occupant.
 
 Then I read further and get to know, that [My-Female-Choir-Friend](1971091160.md) now also did a [Verification](600128.md) with her [Personal-Computer](404.md):
 
@@ -430,11 +430,11 @@ And BTW, since serveral Years I get more and more the Impression that our [Devel
 
 ![Old but still Good!](400000115.jpg)
 
-But [Safety-First](404.md), so let's nevertheless do my planned [Measurement](10000022.md). Although my new Baby and I have been really careful, the Operation still gets a bit messy - obviously we need more physical [Training](600100.md):
+But [Safety-First](404.md), so let's nevertheless do my planned [Measurement](10000022.md). Although my new Baby and I have been really careful, the Operation still gets a bit messy&nbsp;-&nbsp;Obviously we need more physical [Training](600100.md):
 
 ![Sloddy Work](400000114.jpg)
 
-But probably good enough, so now we can do Everything with Manual-Operation and without the Help of such silly Machines - so back to our last Equation:
+But probably good enough, so now we can do Everything with Manual-Operation and without the Help of such silly Machines&nbsp;-&nbsp;So back to our last Equation:
 
 $$ F = 128^{\frac{1}{12}} $$
 
@@ -823,7 +823,7 @@ Unfortunately it is not such simple, because in our Case we don't have a linear 
 
 $$FR = 2^{\frac{CT}{1200\, Cent}}$$
 
-The Reason for the 1200 Cent is the Octave again, that is exactly 12 Have-Tones, or $12 * 100\, Cent = 1200\, Cent$, so $2^{\frac{1200\, Cent}{1200\, Cent}} = 2^1 = 2$, which is - as we already know - the Frequency-Ratio 2:1 of our Ocatave.
+The Reason for the 1200 Cent is the Octave again, that is exactly 12 Have-Tones, or $12 * 100\, Cent = 1200\, Cent$, so $2^{\frac{1200\, Cent}{1200\, Cent}} = 2^1 = 2$, which is&nbsp;-&nbsp;as we already know&nbsp;-&nbsp;the Frequency-Ratio 2:1 of our Ocatave.
 
 So now let's calculate the Frequency-Ratio for the Pythagorean-Comma with 23,46 Cent:
 
@@ -3311,7 +3311,7 @@ On a Smoking-Round I decided to change the Name of my new Identity to [Doktor-Ho
 
 But then I extended the [Scope](600074.md) from [Medical-System](800014.md) to [Academics-System](600000.md), which would change the [Meaning](60002.md) of the [Number-File](300000010.md).
 
-Fortunately I have also an [old](5.md#1001) Rule that allows to do some [Mistakes](60074.md) - at least during one [All-Dings-Day](300000011.md).
+Fortunately I have also an [old](5.md#1001) Rule that allows to do some [Mistakes](60074.md)&nbsp;-&nbsp;At least during one [All-Dings-Day](300000011.md).
 
 #### Blog-Chain-Time 2023.04.19-01:47 in Tübingen <a id="2503"/>
 ###### Topics: Warning
