Make it more clear

--- a/23.md
+++ b/23.md
@@ -328,7 +328,7 @@ Since my Music-[Star](40000010.md) wants to keep the Octaves with the Ratio 2:1,
 
 $$ F^12 = 2^7 $$
 
-As we already know, the [Exponentiation](13000022.md) can be expanded:
+As we already know, the [Exponentiation](13000022.md) by *Seven* can be expanded into a *seven*-fold continued [Multiplication](13000021.md):
 
 $$ F^12 = 2 * 2 * 2 * 2 * 2 * 2 * 2 $$
 
