--- a/23.md
+++ b/23.md
@@ -368,7 +368,11 @@ We all know that $60 * 2 = 120$ and $4 * 2 = 8$, therefore:
 
 $$ F^12 = 128 $$
 
-The very last Step is for advanced Mathematicians:
+The very last Step is for more advanced Mathematicians, where we apply [Exponentiation](13000022.md) with $\frac{1}{12}$ on both Sides of the Equation:
+
+$$ (F^12)^{\frac{1}{12}} = (128)^{\frac{1}{12}} $$
+
+Finally we shorten the [Fraction](12000044.md) and get:
 
 $$ F = 128^{\frac{1}{12}} = \sqrt[12]{128} $$
 
@@ -380,7 +384,7 @@ Strange, this means 2:1 against the Table of my Music-[Fairy](40000010.md):
 
 ![Win for the Man/Machine?](400000109.jpg)
 
-Oh Boy, don't be stupid! We all know [Mens-Rule-Nr-1](200100004.md), so the Mistake must be on our Side. And because this is a really hard Nut, this Time I definitely need really competent Help. So Tomorrow let's ask my Mens-Colleague [Bert](1971091153.md), because Today it has already become quite late:
+But oh Boy, don't be naive&nbsp;-&nbsp;Since we all know [Mens-Rule-Nr-1](200100004.md), the Mistake must be on our Side and because this is a really hard Nut, this Time I definitely need really competent Help. So Tomorrow let's ask my Mens-Colleague [Bert](1971091153.md), because Today it has already become quite late:
 
 ![Don't forget: Ask Bert!](400000110.jpg)
 
