Make it more clear

--- a/23.md
+++ b/23.md
@@ -466,10 +466,12 @@ With the already successfully applied Mechanism, we further simplify that:
 
 $$ F = ({2^7})^\frac{1}{12} = 2^{7*\frac{1}{12}} = 2^{\frac{7}{12}} $$
 
+Oehm&nbsp;...
+
 #### Blog-Chain-Time 2023.10.06-04:00 in Tübingen <a id="12006"/>
 ###### Topics: Pythagorean-Comma
 
-What the Φοκκ, obviously I made a Mistake in the Indian-Restaurant, because I cannot reduce this Term to $\sqrt{2}$, sorry my Bad. But no Problem, because all good Mathematicians know, we can use [Newton's–Method](12000054.md) for getting an [Approximation](600156.md) for the [Root-Function](13000023.md).
+What the Φοκκ, obviously I made a Mistake in the Indian-Restaurant, because I cannot reduce the Term $2^{\frac{7}{12}}$ to $\sqrt{2}$, sorry my Bad. But no Problem, because all good Mathematicians know, we can use [Newton's–Method](12000054.md) for getting an [Approximation](600156.md) for the [Root-Function](13000023.md).
 
 Ohm, how is the simple Formuala expressed in LaTeX? As already mentioned, my Skills are a bit rusty here and there, but thanks God I have [My-Good-Old-Latex-Book](9300010.md):
 
