--- a/23.md
+++ b/23.md
@@ -676,7 +676,7 @@ Although I studied [Economics](130000000.md) myself, up to now the [Idea](600012
 
 ## Footnotes
 
-[<a id="10850"/>0] Online-Python: [https://www.programiz.com/python-programming/online-compiler](https://www.programiz.com/python-programming/online-compiler)
+[<a id="10850"/>0] Online-Python: [https://programiz.com](https://www.programiz.com/python-programming/online-compiler)
 
 
 ## Day-105: Singing & Dings-Day <a id="10500"/>
