Make it more clear

--- a/23.md
+++ b/23.md
@@ -372,7 +372,7 @@ The very last Step is for more advanced Mathematicians, where we apply [Exponent
 
 $$ (F^12)^{\frac{1}{12}} = (128)^{\frac{1}{12}} $$
 
-Finally we shorten the [Fraction](12000044.md) and get:
+Finally we shorten the [Fraction](12000044.md) on the Left and get:
 
 $$ F = 128^{\frac{1}{12}} = \sqrt[12]{128} $$
 
