--- a/23.md
+++ b/23.md
@@ -74,7 +74,7 @@ After a Talk with [My-Black-Forest-Friend](1971091169.md) on the current [Israel
 
 > Israel is *not* trying to wipe the Palestinian People off their Map.
 
-This is then compared by [Katy_Halper](70000075.md) with a [Speech](60010004.md) [[1]](#18051) of [Netanjahu](70000073.md) from End of October 2023:
+This [Opinion](600028.md) then compared by [Katy_Halper](70000075.md) with a [Speech](60010004.md) [[1]](#18051) of [Netanjahu](70000073.md) from End of October 2023:
 
 > "You must remember what *Amalek* has done to you" says our Holy Bible. \
 > We do remember and we are fighting.
