--- a/140000086.md
+++ b/140000086.md
@@ -1,3 +1,3 @@
 # Geographic-Area-on-Earth
 
-Geographic-Area-on-Earth is a [Geographic-Area](140000085.md) on the [Earth](404.md).
+Geographic-Area-on-Earth is a [Geographic-Area](140000085.md) on the [Earth](10500005.md).
