Make it more precise

--- a/140000084.md
+++ b/140000084.md
@@ -1,6 +1,6 @@
 # Gaza-Strip
 
-The Gaza-Strip is a [Geographic-Area](140000085.md).
+The Gaza-Strip is a [Geographic-Area-on-Earth](140000086.md).
 
 ## Links
 
