--- a/301000008.md
+++ b/301000008.md
@@ -1,3 +1,3 @@
 # Public-Broadcasting-Biased-Hypothesis
 
-The Public-Broadcasting-Biased-Hypothesis is a [Hypothesis](600028.md), that [Public-Service-Broadcasters](191000003.md) have [Bias](404.md) in the Year 2023.
+The Public-Broadcasting-Biased-Hypothesis is a [Hypothesis](600028.md), that [Public-Service-Broadcasters](191000003.md) have [Bias](41010011.md) in the Year 2023.
