--- a/301000006.md
+++ b/301000006.md
@@ -1,3 +1,3 @@
 # Israel-Palestinian-Genocide-Hypothesis
 
-Israel-Palestinian-Genocide-Hypothesis is a [Hypothesis](600028.md), that [Israel](140000067.md) commits [Genocide](40902001.md) against the [Palestines](140000073.md) in the [Israel-Conflict](141000015.md).
+Israel-Palestinian-Genocide-Hypothesis is a [Hypothesis](600028.md), that the [Government](250010000.md) of [Israel](140000067.md) commits [Genocide](40902001.md) against the [Palestines](140000073.md) in the [Israel-Conflict](141000015.md).
