--- a/193000000.md
+++ b/193000000.md
@@ -1,6 +1,6 @@
 # Dr-Gabor_Maté-on-Israel-Palestine <a id="1"/>
 
-Dr-Gabor_Maté-on-Israel-Palestine is an [Interview](404.md) from [Gabor_Maté](70000078.md) and [Hannah_Maté](404.md).
+Dr-Gabor_Maté-on-Israel-Palestine is an [Interview](404.md) from [Gabor_Maté](70000078.md) and [Hannah_Maté](70000079.md).
 
 ## Links <a id="1000"/>
 
