--- a/23.md
+++ b/23.md
@@ -67,23 +67,28 @@
 
 ## Day-118: Politics and Religion <a id="18000"/>
 
+#### Blog-Chain-Time 2023.11.25-15:56 in Tübingen  <a id="18010"/>
+###### Topics: Hypothesis
+
+While I just want to start a complicated Work for the Dings-Project [Michael-Peters](1971091155.md) calls me to discuss some Issues with his planned [Vernissage](199000012.md).
+
+As usual I also report about my current Projects and we come to the Subject of the [Israel-Conflict](141000015.md) again, where he then recommends a [YouTube-Video](190000009.md) [[5]](#18055) from the Jewish [Gabor_Maté](70000078.md), who takes a hard Line with his own People:
+
+- [Gaza-Strip is a Concentration-Camp](301000005.md) [[5-09:10]]()
+- [Israel commits Genocide](301000006.md) [[5-A]]()
+- [Israel has 4th strongest Military](301000007.md) [[3]]()
+
 #### Blog-Chain-Time 2023.11.23-19:00 in Tübingen  <a id="18001"/>
 ###### Topics: Politics, Religion
 
-After a Talk with [My-Black-Forest-Friend](1971091169.md) on the current [Israel-Conflict](141000015.md), he sends me a Link to a [YouTube](190000001.md)-Video [[0]](#18050) with a [Statement](600078.md) of the American Ex-Admiral [John_Kirby](70000074.md):
+After a Talk with [My-Black-Forest-Friend](1971091169.md) on the current [Israel-Conflict](141000015.md), he sends me a Link to a [YouTube](190000001.md)-Video [[5]](#18055) with a [Statement](600078.md) of the American Ex-Admiral [John_Kirby](70000074.md):
 
 > Israel is *not* trying to wipe the Palestinian People off their Map.
 
 This [Opinion](600028.md) then compared by [Katy_Halper](70000075.md) with a [Speech](60010004.md) [[1]](#18051) of [Netanjahu](70000073.md) from End of October 2023:
 
 > "You must remember what *Amalek* has done to you" says our Holy Bible. \
-> We do remember and we are fighting.
-
-I find out, that this is a [Quote](700059.md) [[2]](#18052) of the [Book-of-Deuteronomy](71000017.md), where it is written:
-
-> Don’t forget what *Amalek* did to you on the Road after you left Egypt, how he attacked you when you were tired, barely able to put one Foot in front of another [...]. When GOD, your God, gives you Rest from all the Enemies that surround you in the inheritance-land GOD, your God, is giving you to Possess, you are to *wipe the Name of Amalek from off the Earth*. Don’t forget!
-
-The [Amalek](180000017.md) were [Nomadic-People](180000016.md), who are said to have had a lot of Trouble with the [Israeli-People](140000071.md) and probably (as planned by God) got wiped out because of that:
+> We do remember and we are fighting.  I find out, that this is a [Quote](700059.md) [[2]](#18052) of the [Book-of-Deuteronomy](71000017.md), where it is written: > Don’t forget what *Amalek* did to you on the Road after you left Egypt, how he attacked you when you were tired, barely able to put one Foot in front of another [...]. When GOD, your God, gives you Rest from all the Enemies that surround you in the inheritance-land GOD, your God, is giving you to Possess, you are to *wipe the Name of Amalek from off the Earth*. Don’t forget!  The [Amalek](180000017.md) were [Nomadic-People](180000016.md), who are said to have had a lot of Trouble with the [Israeli-People](140000071.md) and probably (as planned by God) got wiped out because of that:
 
 ![Dead Thing](400000192.jpg)
 
@@ -109,7 +114,9 @@ Nevertheless the Time was worth it, because I got some new Information for [My-D
 [<a id="18051"/>1] Uneindeutigkeit als Taktik: [https://taz.de](https://taz.de/Benjamin-Netanjahus-Kriegsrhetorik/!5964144) \
 [<a id="18052"/>2] Deuteronomy: [https://www.bible.com](https://www.bible.com/bible/97/DEU.25.17,18,19) \
 [<a id="18053"/>3] [My-Bible-Samuel-1-15-2](400000190.md) \
-[<a id="18054"/>4] [My-Bible-Exodus-17-4](400000191.md)
+[<a id="18054"/>4] [My-Bible-Exodus-17-4](400000191.md) \
+[<a id="18055"/>5] Dr.Gabor_Maté on Israel/Palestine: [https://youtu.be](https://youtu.be/SHDBw-wx6w0) \
+&nbsp;&nbsp;[<a id="18056"/>[09:18](https://youtu.be/SHDBw-wx6w0?t=9m18s)]
 
 ## Day-116: The Local-Web-App <a id="16000"/>
 
