--- a/70000079.md
+++ b/70000079.md
@@ -4,4 +4,4 @@ Hannah-Rose_Maté is a [Human](40000001.md).
 
 ## Links
 
-- Instagram: [https://instagram.com](https://www.instagram.com/hannahrosemate)
+- [Instagram](241000002.md): [https://instagram.com](https://www.instagram.com/hannahrosemate)
