--- a/70000078.md
+++ b/70000078.md
@@ -4,4 +4,4 @@ Gabor_Maté is a [Human](40000001.md).
 
 ## Links
 
-- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Gabor_Mat%C3%A9)
+- [Wikipedia](190000006.md): [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Gabor_Mat%C3%A9)
