--- a/23.md
+++ b/23.md
@@ -72,11 +72,14 @@
 
 While I just want to start a complicated Work for the Dings-Project [Michael-Peters](1971091155.md) calls me to discuss some Issues with his planned [Vernissage](199000012.md).
 
-As usual I also report about my current Projects and we come to the Subject of the [Israel-Conflict](141000015.md) again, where he then recommends a [YouTube-Video](190000009.md) [[5]](#18055) from the Jewish [Gabor_Maté](70000078.md), who takes a hard Line with his own People:
+As usual I also report about my current Projects and we come to the Subject of the [Israel-Conflict](141000015.md) again, where he then recommends the [Matés-on-Israel-Palestinei-Iterview](193000000.md), where the Jewish [Dr.Gabor_Maté](70000078.md) is interviewed by [Hanna](70000079.md), who is his [Daughter](40000009.md).
 
-- [Gaza-Strip is a Concentration-Camp](301000005.md) [[5-09:10]]()
-- [Israel commits Genocide](301000006.md) [[5-A]]()
-- [Israel has 4th strongest Military](301000007.md) [[3]]()
+
+The [Doctor](800002.md) really takes a hard Line with his own People and talks about the following [Hypotheses](600028.md):
+
+- [Gaza-Strip is a Concentration-Camp](301000005.md)
+- [Israel commits Genocide](301000006.md)
+- [Israel has 4th strongest Military](301000007.md)
 
 #### Blog-Chain-Time 2023.11.23-19:00 in Tübingen  <a id="18001"/>
 ###### Topics: Politics, Religion
@@ -115,8 +118,6 @@ Nevertheless the Time was worth it, because I got some new Information for [My-D
 [<a id="18052"/>2] Deuteronomy: [https://www.bible.com](https://www.bible.com/bible/97/DEU.25.17,18,19) \
 [<a id="18053"/>3] [My-Bible-Samuel-1-15-2](400000190.md) \
 [<a id="18054"/>4] [My-Bible-Exodus-17-4](400000191.md) \
-[<a id="18055"/>5] Dr.Gabor_Maté on Israel/Palestine: [https://youtu.be](https://youtu.be/SHDBw-wx6w0) \
-&nbsp;&nbsp;[<a id="18056"/>[09:18](https://youtu.be/SHDBw-wx6w0?t=9m18s)]
 
 ## Day-116: The Local-Web-App <a id="16000"/>
 
