--- a/301000005.md
+++ b/301000005.md
@@ -1,3 +1,7 @@
 # Gaza-Concentration-Camp-Hypothesis
 
 Gaza-Concentration-Camp-Hypothesis is a [Hypothesis](600028.md), that the [Gaza-Strip](140000084.md) is a [Concentration-Camp](40700001.md).
+
+## References
+
+- [Dr-Gabor_Maté-on-Israel-Palestine](193000000.md)
